Adjust Connectivity font size on mobile and fix vertical card width

--- a/components/front/connectivity.module.css
+++ b/components/front/connectivity.module.css
@@ -38,7 +38,7 @@
 
 @media only screen and (max-width: 768px) {
 	.connectivity .heading h2 {
-		font-size: 40px;
+		font-size: 35px;
 	}
 
 	.connectivity .heading h3 {
