--- a/components/front/verticals.module.css
+++ b/components/front/verticals.module.css
@@ -7,7 +7,7 @@
 }
 
 .verticals .card {
-	width: 320px;
+	max-width: 320px;
 	height: 400px;
 	background: #ffffff;
 	box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.2);
